# rec-time-monitor

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  build-macos-installer.sh  build-macos.sh  buildspec.json  notarize-macos.sh
.github/scripts/: package-macos
.github/workflows/: build-project.yaml  push.yaml
cmake/common/: buildspec_common.cmake
installer/macos/: distribution.xml  welcome.html
installer/windows/: rec-time-monitor.iss
src/: badge-image.cpp  badge-image.hpp  big-time-editor.cpp  big-time-editor.hpp  message-image.cpp  message-image.hpp  plugin-main.cpp  program-display-mac.mm  program-display-win.cpp  program-display.cpp  program-display.hpp  program-monitor-dialog.cpp  program-monitor-dialog.hpp  quick-message-dialog.cpp  quick-message-dialog.hpp  settings-dialog.cpp  settings-dialog.hpp  settings.cpp  settings.hpp  time-tracker.cpp  time-tracker.hpp  time-unit-dial.cpp  time-unit-dial.hpp
